--- a/index.html
+++ b/index.html
@@ -3,11 +3,20 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="color-scheme" content="dark" />
-    <link rel="icon" href="/favicon.svg" />
+    <meta name="color-scheme" content="light" />
     <title>КУБ — инженерные системы под ключ</title>
+
+    <!-- Favicon (чтобы точно обновился, нет старого favicon.svg) -->
+    <link rel="icon" type="image/png" href="/logo-cube2.png" sizes="32x32" />
+    <link rel="icon" type="image/png" href="/logo-cube2.png" sizes="64x64" />
+    <link rel="apple-touch-icon" href="/logo-cube2.png" sizes="180x180" />
+
+    <!-- шрифт Inter -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800;900&display=swap" rel="stylesheet">
   </head>
-  <body class="bg-black text-white">
+  <body class="bg-white text-black">
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
