--- a/index.html
+++ b/index.html
@@ -5,11 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="color-scheme" content="light" />
     <title>КУБ — инженерные системы под ключ</title>
+    <link rel="preload" as="image" href="/image1-1920.webp" fetchpriority="high">
 
     <!-- Favicon (чтобы точно обновился, нет старого favicon.svg) -->
     <link rel="icon" type="image/png" href="/logo-cube2.png" sizes="32x32" />
     <link rel="icon" type="image/png" href="/logo-cube2.png" sizes="64x64" />
     <link rel="apple-touch-icon" href="/logo-cube2.png" sizes="180x180" />
+    
 
     <!-- шрифт Inter -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
