--- a/index.html
+++ b/index.html
@@ -11,7 +11,10 @@
     <link rel="icon" type="image/png" href="/logo-cube2.png" sizes="32x32" />
     <link rel="icon" type="image/png" href="/logo-cube2.png" sizes="64x64" />
     <link rel="apple-touch-icon" href="/logo-cube2.png" sizes="180x180" />
-    
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link href="https://fonts.googleapis.com/css2?family=Jost:wght@500;600;700&display=swap" rel="stylesheet" />
+
 
     <!-- шрифт Inter -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
